@@ -18,7 +18,7 @@ import org.deltava.util.StringUtils;
 /**
  * A Web Site Command to import airway data in PSS format.
  * @author Luke
- * @version 2.4
+ * @version 2.6
  * @since 2.0
  */
 
@@ -126,8 +126,11 @@ public class AirwayImportCommand extends AbstractCommand {
 			ctx.release();
 		}
 		
+		// Purge the cache
+		new GetNavRoute(null).clear();
+		
 		// Set status attributes
-		ctx.setAttribute("entryCount", new Integer(entryCount), REQUEST);
+		ctx.setAttribute("entryCount", Integer.valueOf(entryCount), REQUEST);
 		ctx.setAttribute("isImport", Boolean.TRUE, REQUEST);
 		ctx.setAttribute("doPurge", Boolean.valueOf(doPurge), REQUEST);
 		ctx.setAttribute("airway", Boolean.TRUE, REQUEST);
